# omniROS

./: .gitattributes  LICENSE  README.md  TODO.txt
Arduino_sketches/joystick_controller_rosarduinolib/: joystick_controller_rosarduinolib.ino
Arduino_sketches/omniROS_arduino/: computeSpeed.ino  omniROS_arduino.ino
Arduino_sketches/omniROS_arduino_oldversion/omniros_arduino_oldversion/: ComputeSpeed.ino  omniros_arduino_oldversion.ino
Arduino_sketches/omniROS_arduino_rosserial/computeSpeed.ino/: computeSpeed.ino  computeSpeed.ino.ino
Arduino_sketches/omniROS_esp8266/: omniROS_esp8266.ino
Arduino_sketches/omniROS_esp8266/omniROS_esp8266/: omniROS_esp8266.ino
Arduino_sketches/omniROS_esp8266_wheel_radius_calibration/: kinematic_model.ino  omniROS_esp8266_wheel_radius_calibration.ino
Documentation and misc/: Commands ROS  FlowChart  Maxima_holonomic_differentRadius.wxmx  PlotJuggler_PID_Simulation.xml  killall.bash  rqt_multiplot.xml  rqt_multiplot_PID.xml  rqt_multiplot_PID_Simulation.xml  tips.txt
envs/: __init__.py
envs/omniROS/: __init__.py  omniROS_env.py
lidar_ws/devel/: .catkin  .rosinstall  setup.sh
lidar_ws/devel/lib/pkgconfig/: ydlidar.pc
lidar_ws/devel/lib/ydlidar/: ydlidar_client  ydlidar_node
lidar_ws/devel/share/ydlidar/cmake/: ydlidarConfig.cmake
omniROS_ws/devel/: .catkin  .rosinstall
omniROS_ws/devel/include/model_state_stamper/: ModelStatesStamped.h
omniROS_ws/devel/include/rosserial_arduino/: Adc.h  TestRequest.h  TestResponse.h
omniROS_ws/devel/include/rosserial_msgs/: Log.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
omniROS_ws/devel/include/total_torque/: Float32Stamped.h
omniROS_ws/devel/lib/clock_server/: clock_server_node
omniROS_ws/devel/lib/fitness/: fitness
omniROS_ws/devel/lib/model_state_stamper/: model_state_stamper
omniROS_ws/devel/lib/odometry_computation/: odometry_computation_node
omniROS_ws/devel/lib/odometry_stamper/: odometry_stamping_node
omniROS_ws/devel/lib/pkgconfig/: clock_server.pc  ddpg.pc  description.pc  fitness.pc  gui.pc  launch.pc  model_state_stamper.pc  odometry_computation.pc  odometry_stamper.pc  rosserial_arduino.pc  rosserial_msgs.pc  rosserial_python.pc  serial.pc  simulation.pc  speed_test_gazebo.pc  total_torque.pc  wcomputation.pc  ydlidar.pc
omniROS_ws/devel/lib/serial/: serial_example
omniROS_ws/devel/lib/simulation/: simulation
omniROS_ws/devel/lib/total_torque/: total_torque
omniROS_ws/devel/lib/ydlidar/: ydlidar_client  ydlidar_node
omniROS_ws/devel/share/clock_server/cmake/: clock_serverConfig.cmake
omniROS_ws/devel/share/ddpg/cmake/: ddpgConfig.cmake
omniROS_ws/devel/share/description/cmake/: descriptionConfig.cmake
omniROS_ws/devel/share/fitness/cmake/: fitnessConfig.cmake
omniROS_ws/devel/share/gui/cmake/: guiConfig.cmake
omniROS_ws/devel/share/launch/cmake/: launchConfig.cmake
omniROS_ws/devel/share/model_state_stamper/cmake/: model_state_stamper-msg-paths.cmake  model_state_stamperConfig.cmake
omniROS_ws/devel/share/odometry_computation/cmake/: odometry_computationConfig.cmake
omniROS_ws/devel/share/odometry_stamper/cmake/: odometry_stamperConfig.cmake
omniROS_ws/devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
omniROS_ws/devel/share/rosserial_msgs/cmake/: rosserial_msgs-msg-paths.cmake  rosserial_msgsConfig.cmake
omniROS_ws/devel/share/rosserial_python/cmake/: rosserial_pythonConfig.cmake
omniROS_ws/devel/share/serial/cmake/: serialConfig.cmake
omniROS_ws/devel/share/simulation/cmake/: simulationConfig.cmake
omniROS_ws/devel/share/speed_test_gazebo/cmake/: speed_test_gazeboConfig.cmake
omniROS_ws/devel/share/total_torque/cmake/: total_torque-msg-paths.cmake  total_torqueConfig.cmake
omniROS_ws/src/clock_server/: CMakeLists.txt  package.xml
omniROS_ws/src/clock_server/src/: clock_server.cpp
omniROS_ws/src/ddpg/: CMakeLists.txt
omniROS_ws/src/ddpg/src/: ddpg.py  omniROS_env.py  original_ddpg.py  shellCommandDDPG.sh  visualize.bash
omniROS_ws/src/description/ball/: model.sdf
omniROS_ws/src/description/omniROS/: model.config  model.sdf
omniROS_ws/src/description/worlds/: model.config  omniROS.world  worldColor
omniROS_ws/src/fitness/: CMakeLists.txt
omniROS_ws/src/fitness/src/: fitness.cpp
omniROS_ws/src/gazebo_plugin_ball/: CMakeLists.txt  ball_plugin.cc
omniROS_ws/src/gazebo_plugin_contact/: CMakeLists.txt  contact_plugin.cc
omniROS_ws/src/gazebo_plugin_holonomic/: CMakeLists.txt  holonomic_model_plugin.cc  holonomic_model_plugin0.cc
omniROS_ws/src/gazebo_plugin_lidar/: CMakeLists.txt  lidar_plugin.cc
omniROS_ws/src/gazebo_plugin_simulation/: CMakeLists.txt  simulation_plugin.cc
omniROS_ws/src/gazebo_plugin_torque_sensor/: CMakeLists.txt  torque_plugin.cc
omniROS_ws/src/gui/: CMakeLists.txt  package.xml
omniROS_ws/src/gui/src/: gui_node.py
omniROS_ws/src/launch/: omniROSClient.launch  omniROSServer.launch  omniROSSimu.launch  omniROSSimu2.launch  package.xml
omniROS_ws/src/launch/rviz/: config_laser.rviz
omniROS_ws/src/model_state_stamper/: CMakeLists.txt
omniROS_ws/src/model_state_stamper/src/: model_state_stamping_node.cpp
omniROS_ws/src/odometry_computation/: CMakeLists.txt  package.xml
omniROS_ws/src/odometry_computation/src/: odometry_computation.cpp
omniROS_ws/src/odometry_stamper/: CMakeLists.txt
omniROS_ws/src/odometry_stamper/src/: odometry_stamper.cpp
omniROS_ws/src/simulation/: CMakeLists.txt
omniROS_ws/src/simulation/src/: simulation.cpp  simulation.py
omniROS_ws/src/speed_test_gazebo/: CMakeLists.txt
omniROS_ws/src/speed_test_gazebo/src/: speed_test.py
omniROS_ws/src/total_torque/: CMakeLists.txt  package.xml
omniROS_ws/src/total_torque/src/: totalTorque.cpp
omniROS_ws/src/wcomputation/: CMakeLists.txt  package.xml
omniROS_ws/src/wcomputation/src/: wcomputation_node.py
(+145 files in other folders)
